# Orchestration_ml

./: README.md  ocr_test.py  pyproject.toml  requirements.txt  test_yolo.py  view_results.py
.github/workflows/: ci.yml
conf/base/: catalog.yml  parameters.yml  parameters__01_load_data.yml  parameters__02_Yolo_pipeline.yml  parameters__02_yolo.yml  parameters__03_OCR.yml  parameters_ocr_processing.yml  parameters_yolo_detection.yml  tesseract_config.yml
flask_app/: app.py
flask_app/templates/: index.html
runs/detect/train/: args.yaml
runs/detect/train10/: args.yaml
runs/detect/train11/: args.yaml
runs/detect/train12/: args.yaml
runs/detect/train13/: args.yaml
runs/detect/train14/: args.yaml
runs/detect/train15/: args.yaml
runs/detect/train16/: args.yaml
runs/detect/train17/: args.yaml
runs/detect/train18/: args.yaml
runs/detect/train19/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train20/: args.yaml
runs/detect/train21/: args.yaml
runs/detect/train22/: args.yaml
runs/detect/train23/: args.yaml
runs/detect/train24/: args.yaml
runs/detect/train25/: args.yaml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
runs/detect/train6/: args.yaml
runs/detect/train7/: args.yaml
runs/detect/train8/: args.yaml
runs/detect/train9/: args.yaml
src/orchestration_proj/: __init__.py  __main__.py  pipeline_registry.py  settings.py  test_main.py
tests/: test_ocr.py  test_pipeline_registry.py
tests/pipelines/_01_load_data/: test_pipeline.py
(+29 files in other folders)
